finalized and completed
finalized and completed

--- a/Notebook/Tanzania_mobile_money.ipynb
+++ b/Notebook/Tanzania_mobile_money.ipynb
@@ -2036,8 +2036,9 @@
    "metadata": {},
    "source": [
     "* Most of the individuals using mobile money are individual who also use other financial services\n",
-    "* Though lage number of people using mobile money are married people, also large number of married individuals are not using mobile money, this means that data is dominated by married individuals compared to other marital status\n",
-    "* "
+    "* Though lage number of people using mobile money are married people, also large number of married individuals are not using mobile money, this means that data is dominated by married individuals compared to other marital status, this issue is also seen \n",
+    "* Majority of mobile money users use it to purchase compare to payment of bills\n",
+    "* The data was not evenly collected between genders within Gender and Economic status"
    ]
   },
   {
